# Autonomous-cyber-security-agent

./: .gitignore  .gitignore.txt  README.md  astra_agent.py  main.py  model.py  package.json  pyproject.toml
app/: db.py  main.py
app/ai/: advisor.py  agent_graph.py  explain.py  tools.py
app/api/: routes.py
app/ml/: predict.py  train.py
app/network/: capture.py
app/response/: actions.py
frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css
frontend/src/: App.jsx  config.js  styles.css
frontend/src/components/: StatCard.jsx  StatusPill.jsx
frontend/src/pages/: DashboardPage.jsx  DetectionPage.jsx  LogsPage.jsx  ModelPage.jsx  MonitoringPage.jsx  OnboardingPage.jsx  SettingsPage.jsx  SitesPage.jsx
frontend/src/services/: api.js
fyp/: __init__.py
tests/: test_agent_detection.py  test_api_health.py
