[project]
name = "fyp"
version = "0.1.0"
description = "This is my final year project"
authors = [
    {name = "y"}
]
readme = "README.md" 
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "joblib>=1.5.3",
    "langchain>=1.2.17",
    "langgraph>=1.1.10",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "python-multipart>=0.0.26",
    "scapy>=2.7.0",
    "scikit-learn>=1.8.0",
]
  



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
